...

const { width } = Dimensions.get('window');

export const CATEGORIES_DATA = [
  {
    id: 1,
    name: 'Visiting Cards',
    slug: 'visiting-cards',
    image: require('../../assets/images/home/cat_visiting_cards_img.png'),
    bg: '#FAE1D9',
    arrowColor: '#EF1C62',
  },
  {
...

export const HomeCategorySection = ({ onCategoryPress, onViewAllPress }) => {
  return (
    <View style={styles.sectionContainer}>
      {/* 1. Header: Shop by Category & View All */}
      <View style={styles.sectionHeader}>
        <Text style={styles.sectionTitle}>Shop by Category</Text>
        <TouchableOpacity
          onPress={onViewAllPress}
          activeOpacity={0.7}
          style={styles.viewAllBtn}
        >
          <Text style={styles.viewAllText}>View All</Text>
...
